Begin extracting java metakernel machinery.